# uci-llm

./: Cargo.toml  README.md
src/: fen2md.rs  main.rs  state.rs  utils.rs
src/api/: input.rs  mod.rs  output.rs
src/assets/: LICENSE.txt  go-mcp.md  go-prompt.md  go-simple.md
src/command/: debug.rs  go.rs  isready.rs  license.rs  mod.rs  position.rs  quit.rs  setoption.rs  stop.rs  uci.rs
src/state/: options.rs
