[package]
name = "uci-llm"
version = "0.1.0"
edition = "2024"

[dependencies]
async-openai = { version = "0.32.4", features = ["responses"] }
chess = "3.2.0"
futures = "0.3.31"
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = "0.7.18"
